cmake_minimum_required(VERSION 3.14)
project(CSAPP C)

set(CMAKE_C_STANDARD 99)

add_executable(CSAPP main.c Chapter2/chapter2.h Chapter2/chapter2.c Chapter3/chapter3.c Chapter3/chapter3.h Chapter5/chapter5.c Chapter5/chapter5.h Chapter6/chapter6.c Chapter6/chapter6.h Chapter9/chapter9.c Chapter9/chapter9.h)